<?xml version="1.0"?>
<package format="2">
  <name>motion_decision</name>
  <version>0.0.0</version>
  <description>The motion_decision package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>

  <license>BSD 3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>joy</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
